# cost_per_100_miles_code

./: README.md  calculate_cents_per_kwh.py  ev_vs_gasv_costs.md  main.py  pyproject.toml  run_tests.py  test_gas_cost_calculations.py
lib/: calculate_cents_per_kwh.py  electricity_cost.json  ev_efficiency.json  gas_calculations.py  gas_efficiency.json  gas_prices.json  output_markdown.py
tests/: test_gas_cost_calculations.py  test_output_markdown.py
